# maslab-cars-vision

./: .gitignore  CMakeLists.txt  README.md  main.cpp
blurDetect/: blurDetect.cpp  blurDetect.h
colorCast/: colorCast  colorCast.cpp  colorCast.h  correction.cpp  correction.h  detection.cpp  detection.h  main.cpp
colorCast/correction/: correction.h
core/: interface.cpp  interface.h
correction/: CMakeLists.txt  correction.cpp  correction.h  main.cpp
detection/: CMakeLists.txt  detection.cpp  detection.h  main.cpp
detection/colorCast/: CMakeLists.txt  colorCast.cpp  colorCast.h  main.cpp
detection/dirtDetec/: main.cpp
dirtDetec/: dirtDetect.cpp  dirtDetect.h  main.cpp
dirtDetect/: CMakeLists.txt  dirtDetect.cpp  dirtDetect.h
ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  settingsLayout.cpp  settingsLayout.h  video.cpp  video.h
ui/maslab-cars-vision_autogen/: moc_predefs.h  mocs_compilation.cpp
